frontend/src/themes/default.css
@import url('https://fonts.googleapis.com/css2?family=Fredoka&display=swap');

* {
    padding: 0;
    margin: 0;
    font-family: 'Fredoka', sans-serif;
    color: white;
}

body {
    background-color: black;
    width: 100%;
    height: 100vh;
    overflow-y: scroll;
    overflow-x: hidden;    
}

.root {
    background-image: url("bg.jpg");
    background-size: cover;
}

input, button {
    border-radius: 10px;
    border: 1px solid rgba(255, 255, 255, 0.2);
    background-color: transparent;
    padding: 5px 15px;
    font-size: 18px;
    transition: all 0.3s ease;
}

input:focus {
    border: 1px solid rgb(255, 139, 62);
    background-color: rgba(196, 88, 0, 0.2);
    outline: none;
}

input:hover {
    border: 1px solid rgb(255, 139, 62);
}

input[type="submit"],button {
    transition: all 0.3s ease;
    background-color: rgb(207, 94, 29);
    color: black;
    cursor: pointer;
}

input[type="submit"]:hover,button:hover {
    border: 1px solid rgb(255, 139, 62);
    background-color: rgba(196, 88, 0, 0.8);
    color: white;
}

input[type="submit"]:focus,input[type="submit"]:focus.active,button:focus,button.active {
    border: 1px solid rgb(255, 139, 62);
    background-color: rgba(196, 88, 0, 0.2);
    color: white;
}

.inner {
    border: 1px solid rgba(150, 150, 150, 0.5);
    border-radius: 10px;
    background-color: rgba(0, 0, 0, 0.85);
}

